Upgrade Mokksy to 0.3.5, fix dependencies