@@ -1,3 +1,4 @@
---add-opens=java.base/java.lang=ALL-UNNAMED
---add-opens=java.base/java.io=ALL-UNNAMED
 --add-modules jdk.incubator.vector
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--enable-native-access=ALL-UNNAMED
